[package]
name = "netns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = {version = "0.27.1", features = ["user", "hostname", "mount", "signal", "sched", "fs"]}
clap = {version = "4.4.8", features = ["derive"]}
eyre = "0.6.8"
daemonize = "0.5.0"
