[package]
name = "netns"
version = "0.1.0"
edition = "2021"
description = "Network Namespace Utils"
readme = "README.md"
repository = "https://github.com/guillaumepellegrino/netns"
license = "GPL-3.0-or-later"
authors = ["Guillaume Pellegrino <guillaume.pellegrino@yahoo.com>"]
keywords = ["network", "namespaces", "linux", "container"]
categories = ["network-programming"]

[dependencies]
nix = {version = "0.27.1", features = ["user", "hostname", "mount", "signal", "sched", "fs"]}
clap = {version = "4.4.8", features = ["derive"]}
eyre = "0.6.8"
daemonize = "0.5.0"
